fixs the broken css code

--- a/app/assets/_scss/layouts/_page.scss
+++ b/app/assets/_scss/layouts/_page.scss
@@ -6,7 +6,7 @@
         @include h1();
     }
 
-    h2{
+    h2 {
         @include h2();
     }
 }
@@ -48,7 +48,7 @@
 
 .project-content {
     margin: calc(2.3em * 2) auto;
-    
+
 }
 
 .projects {
@@ -62,10 +62,6 @@
             display: grid;
             grid-template-columns: 1fr;
             grid-gap: 0 1rem;
-
-            @media screen and (min-width: $tablet) {
-                grid-template-columns: 1fr 1fr;
-            }
         }
 
         @supports not (display: grid) {
@@ -81,13 +77,14 @@
                 margin: 0 2.5%;
             }
 
-            @media screen and (min-width: $desktop){
+            @media screen and (min-width: $desktop) {
                 &:nth-child(3n) {
                     @supports (display: grid) {
                         grid-column: 1/-1;
                     }
                 }
             }
+
             margin-bottom: 2.3em;
 
 
@@ -95,7 +92,7 @@
                 .projects__img {
                     margin: 0;
                     padding: 0;
-                    
+
                     .featured_img {
                         width: 100%;
                         margin: 0;
@@ -104,7 +101,7 @@
                 }
 
                 &:hover {
-                    div > * {
+                    div>* {
                         color: $hover-grey;
                     }
                 }
@@ -121,6 +118,16 @@
 
 }
 
+.projects {
+    @media screen and (min-width: $tablet) {
+        .grid-lg .project__container {
+            grid-template-columns: 1fr 1fr;
+        }
+
+    }
+
+}
+
 // End of Project Layout
 
 // Contact Template
@@ -133,7 +140,8 @@
     }
 
 
-    p, ul li {
+    p,
+    ul li {
         @include paragraph_text($tablet, to-max, 25px);
     }
 
@@ -159,7 +167,7 @@
             color: $hover-grey;
         }
     }
-   
+
     .contact_services {
 
         h2 {
@@ -180,11 +188,13 @@
 
             li {
                 @include flexbox();
-                @include if-min-width($desktop){
+
+                @include if-min-width($desktop) {
                     border: 2px solid $hover-grey;
                     width: 220px;
                     height: 220px;
                 }
+
                 text-align: center;
 
                 span {
@@ -195,8 +205,9 @@
     }
 
     .contact-quote {
-                
+
         @include flexbox();
+
         @include if-min-width($desktop) {
             width: 60%;
             margin: $section-margin;
@@ -204,16 +215,17 @@
 
         position: relative;
         height: 200px;
-        
 
-        &::before, &::after {
+
+        &::before,
+        &::after {
             content: "\201C";
             display: block;
             position: absolute;
             font-size: 60px;
             font-weight: bold;
         }
-        
+
         &::before {
             top: 0;
             left: 0;
